Project

General

Profile

Actions

Bug #42642

closed

mds: MDCache.h compile warnings

Added by Patrick Donnelly over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

In file included from /home/pdonnell/ceph/src/mds/MDCache.cc:23:
/home/pdonnell/ceph/src/mds/MDCache.h: In constructor ‘MDCache::MDCache(MDSRank*, PurgeQueue&)’:
/home/pdonnell/ceph/src/mds/MDCache.h:1267:17: warning: ‘MDCache::recovery_queue’ will be initialized after [-Wreorder]
   RecoveryQueue recovery_queue;
                 ^~~~~~~~~~~~~~
In file included from /home/pdonnell/ceph/src/mds/MDCache.cc:23:
/home/pdonnell/ceph/src/mds/MDCache.h:1168:16: warning:   ‘StrayManager MDCache::stray_manager’ [-Wreorder]
   StrayManager stray_manager;
                ^~~~~~~~~~~~~
/home/pdonnell/ceph/src/mds/MDCache.cc:136:1: warning:   when initialized here [-Wreorder]
 MDCache::MDCache(MDSRank *m, PurgeQueue &purge_queue_) :
 ^~~~~~~
In file included from /home/pdonnell/ceph/src/mds/MDCache.cc:23:
/home/pdonnell/ceph/src/mds/MDCache.h:1283:16: warning: ‘MDCache::trim_counter’ will be initialized after [-Wreorder]
   DecayCounter trim_counter;
                ^~~~~~~~~~~~
In file included from /home/pdonnell/ceph/src/mds/MDCache.cc:23:
/home/pdonnell/ceph/src/mds/MDCache.h:959:17: warning:   ‘OpenFileTable MDCache::open_file_table’ [-Wreorder]
   OpenFileTable open_file_table;
                 ^~~~~~~~~~~~~~~
/home/pdonnell/ceph/src/mds/MDCache.cc:136:1: warning:   when initialized here [-Wreorder]
 MDCache::MDCache(MDSRank *m, PurgeQueue &purge_queue_) :
 ^~~~~~~

Caused by https://tracker.ceph.com/issues/42191


Related issues 1 (0 open1 closed)

Related to CephFS - Cleanup #42191: mds: reorg MDCache headerResolvedVarsha Rao10/07/2019

Actions
Actions #1

Updated by Patrick Donnelly over 4 years ago

Actions #2

Updated by Varsha Rao over 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 31409
Actions #3

Updated by Patrick Donnelly over 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF