mds: Fix MDCache.h reorder compiler warnings

Fixes: https://tracker.ceph.com/issues/42642
Signed-off-by: Varsha Rao <varao@redhat.com>